--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>WebGl d3JS</title>
+    <title>WebGl d3JS</title>
+    <link type="text/css" href="index.css"/>
+    <script type="text/javascript" src="libs/three.js"></script>
+    <script type="text/javascript" src="main.js"></script>
 </head>
+<body>
+<canvas id="canvas"></canvas>
+</body>
 </html>
