--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <title>WebGl d3JS</title>
-    <link type="text/css" href="index.css"/>
-    <script type="text/javascript" src="libs/three.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <meta charset="utf-8"/>
+    <link rel="stylesheet" href="css/index.css"/>
 </head>
 <body>
 <canvas id="canvas"></canvas>
 </body>
+<script type="text/javascript" src="dist/bundle.js"></script>
 </html>
