Moved to Babylon.js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="css/index.css"/>
 </head>
 <body>
+<div class="info">
+    <b style="float: left">WebGL 3D experiment</b>
+    <i>Drag around with mouse to interact</i>
+    <a  style="float: right; margin-right: 12px" href="https://github.com/codebysd/webgl_3d_exp">View on Github</a>
+    <a  style="float: right; margin-right: 12px" href="http://www.blendswap.com/blends/view/56585">Models: BlendSwap</a>
+</div>
 <canvas id="canvas"></canvas>
 </body>
 <script type="text/javascript" src="dist/bundle.js"></script>
