--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 <div class="info">
     <b style="float: left">WebGL 3D experiment</b>
-    <i>Drag around with mouse to interact</i>
+    <i>Drag/Zoom with mouse to interact</i>
     <a  style="float: right; margin-right: 12px" href="https://github.com/codebysd/webgl_3d_exp">View on Github</a>
-    <a  style="float: right; margin-right: 12px" href="http://www.blendswap.com/blends/view/56585">Models: BlendSwap</a>
+    <a  style="float: right; margin-right: 12px" href="http://www.blendswap.com/blends/view/56585">Models by: BlendSwap</a>
 </div>
 <canvas id="canvas"></canvas>
 </body>
