--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>WebGl d3JS</title>
+    <title>WebGl 3D</title>
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="css/index.css"/>
 </head>
 <body>
 <div class="info">
+    <!-- Information panel-->
     <b style="float: left">WebGL 3D experiment</b>
     <i>Drag/Zoom with mouse to interact</i>
     <a  style="float: right; margin-right: 12px" href="https://github.com/codebysd/webgl_3d_exp">View on Github</a>
     <a  style="float: right; margin-right: 12px" href="http://www.blendswap.com/blends/view/56585">Models by: BlendSwap</a>
 </div>
+
+<!--Rendering canvas-->
 <canvas id="canvas"></canvas>
+
 </body>
+<!-- rendering script, load after body tag-->
 <script type="text/javascript" src="dist/bundle.js"></script>
 </html>
